# wxwidgets-camera-detection

./: CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  setup.sh
CPP_wxwidgets/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md
CPP_wxwidgets/include/: yolo_detector.h
include/: frame.h
src/: frame.cpp  main.cpp  yolo_detector.cpp
